# openiap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/openiap/: device.h  error.h  openiap.h
src/libopeniap/: CMakeLists.txt  device.c  error.c  openiap.c
src/openiap/: CMakeLists.txt
